[package]
name = "bkeep"
version = "0.1.0"
authors = ["vedangj044 <vedangj044@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.7", features = [ "mysql" ] }
dotenv = "0.15.0"
clap = "2.33.3"
strum = "0.18"
strum_macros = "0.21.1"
anyhow = "1.0.42"